--- a/config.org
+++ b/config.org
@@ -43,6 +43,15 @@
     (doom-themes-org-config))
 #+END_SRC
 
+** All The Icons
+#+begin_src EMACS-LISP
+(use-package all-the-icons
+:ensure t)
+;; While we're at it: Make dired, ‘dir’ectory ‘ed’itor, look pretty
+(use-package all-the-icons-dired
+:hook (dired-mode . all-the-icons-dired-mode))
+#+end_src>
+
 * Backups
 :PROPERTIES:
 :ID:       1e20764b-eb6e-47da-94da-29d58674fe9a
@@ -285,8 +294,6 @@ Buffers open with vertical split rather than horizontal split by default.
 :ID:       ef8aa0aa-ca90-4922-bf3f-ddd7dcf792fd
 :END:
 #+BEGIN_SRC emacs-lisp
-  (use-package all-the-icons
-    :ensure t)
   (use-package spaceline-all-the-icons
     :ensure t
     :after spaceline
