feat: add counsel

--- a/config.org
+++ b/config.org
@@ -148,6 +148,33 @@ Enable button lock mode
         company-lsp-cache-candidates nil))
 #+end_src
 
+* Ivy
+#+begin_src emacs-lisp
+  (use-package counsel
+    :ensure t)
+  (ivy-mode 1)
+  (setq ivy-use-virtual-buffers t)
+  (setq enable-recursive-minibuffers t)
+  ;; enable this if you want `swiper' to use it
+  ;; (setq search-default-mode #'char-fold-to-regexp)
+  (global-set-key "\C-s" 'swiper)
+  (global-set-key (kbd "C-c C-r") 'ivy-resume)
+  (global-set-key (kbd "<f6>") 'ivy-resume)
+  (global-set-key (kbd "M-x") 'counsel-M-x)
+  (global-set-key (kbd "C-x C-f") 'counsel-find-file)
+  (global-set-key (kbd "<f1> f") 'counsel-describe-function)
+  (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
+  (global-set-key (kbd "<f1> l") 'counsel-find-library)
+  (global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
+  (global-set-key (kbd "<f2> u") 'counsel-unicode-char)
+  (global-set-key (kbd "C-c g") 'counsel-git)
+  (global-set-key (kbd "C-c j") 'counsel-git-grep)
+  (global-set-key (kbd "C-c k") 'counsel-ag)
+  (global-set-key (kbd "C-x l") 'counsel-locate)
+  (global-set-key (kbd "C-S-o") 'counsel-rhythmbox)
+  (define-key minibuffer-local-map (kbd "C-r") 'counsel-minibuffer-history)
+#+end_src
+
 * Fun & Games
 ** Speed Type
 #+begin_src emacs-lisp
@@ -368,17 +395,6 @@ Buffers open with vertical split rather than horizontal split by default.
     (spaceline-all-the-icons-theme)
     (setq-default spaceline-all-the-icons-separator-type 'arrow)
     (setq spaceline-all-the-icons-hide-long-buffer-path t))
-#+END_SRC
-
-** Swiper
-:PROPERTIES:
-:ID:       804cc97a-954e-4e7d-b5bc-07f92103f72f
-:END:
-Advanced searching.
-#+BEGIN_SRC emacs-lisp
-  (use-package swiper
-    :ensure t
-    :bind ("C-s" . swiper))
 #+END_SRC
 
 ** Toolbar Deactivation
