--- a/config.org
+++ b/config.org
@@ -6,7 +6,49 @@
 ** All The Icons
 #+begin_src emacs-lisp
 (use-package all-the-icons
-:ensure t)
+  :if (display-graphic-p)
+  :init (all-the-icons-install-fonts t)
+  :config
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(vterm-mode all-the-icons-octicon "terminal" :v-adjust 0.2))
+  (add-to-list 'all-the-icons-icon-alist
+               '("\\.xpm$" all-the-icons-octicon "file-media" :v-adjust 0.0 :face all-the-icons-dgreen))
+
+  (add-to-list 'all-the-icons-icon-alist
+               '("\\.toml$" all-the-icons-octicon "settings" :v-adjust 0.0 :face all-the-icons-dyellow))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(conf-toml-mode all-the-icons-octicon "settings" :v-adjust 0.0 :face all-the-icons-dyellow))
+  (add-to-list 'all-the-icons-icon-alist
+               '("\\.lua$" all-the-icons-fileicon "lua" :face all-the-icons-dblue))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(lua-mode all-the-icons-fileicon "lua" :face all-the-icons-dblue))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(help-mode all-the-icons-faicon "info-circle" :height 1.1 :v-adjust -0.1 :face all-the-icons-purple))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(helpful-mode all-the-icons-faicon "info-circle" :height 1.1 :v-adjust -0.1 :face all-the-icons-purple))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(Info-mode all-the-icons-faicon "info-circle" :height 1.1 :v-adjust -0.1))
+  (add-to-list 'all-the-icons-icon-alist
+               '("NEWS$" all-the-icons-faicon "newspaper-o" :height 0.9 :v-adjust -0.2))
+  (add-to-list 'all-the-icons-icon-alist
+               '("Cask\\'" all-the-icons-fileicon "elisp" :height 1.0 :v-adjust -0.2 :face all-the-icons-blue))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(cask-mode all-the-icons-fileicon "elisp" :height 1.0 :v-adjust -0.2 :face all-the-icons-blue))
+  (add-to-list 'all-the-icons-icon-alist
+               '(".*\\.ipynb\\'" all-the-icons-fileicon "jupyter" :height 1.2 :face all-the-icons-orange))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(ein:notebooklist-mode all-the-icons-faicon "book" :face all-the-icons-orange))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(ein:notebook-mode all-the-icons-fileicon "jupyter" :height 1.2 :face all-the-icons-orange))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(ein:notebook-multilang-mode all-the-icons-fileicon "jupyter" :height 1.2 :face all-the-icons-orange))
+  (add-to-list 'all-the-icons-icon-alist
+               '("\\.epub\\'" all-the-icons-faicon "book" :height 1.0 :v-adjust -0.1 :face all-the-icons-green))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(nov-mode all-the-icons-faicon "book" :height 1.0 :v-adjust -0.1 :face all-the-icons-green))
+  (add-to-list 'all-the-icons-mode-icon-alist
+               '(gfm-mode all-the-icons-octicon "markdown" :face all-the-icons-lblue)))
+
 ;; While we're at it: Make dired, ‘dir’ectory ‘ed’itor, look pretty
 (use-package all-the-icons-dired
 :hook (dired-mode . all-the-icons-dired-mode))
@@ -247,16 +289,18 @@ Reducing scroll distance so it's actually useful.
 :ID:       f3b10f7a-0cf2-49ea-a99e-aebd96c6cc39
 :END:
 #+BEGIN_SRC emacs-lisp
-    (use-package dashboard
-      :ensure t
-      :config
-      (dashboard-setup-startup-hook)
-      (setq show-week-agenda t)
-      (setq dashboard-items '((recents . 10)
-                              (bookmarks . 2)
-                              (projects . 4)))
-      (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
-      (add-to-list 'recentf-exclude (format "%s/\\.emacs\\.d/elpa/.*" (getenv "HOME"))))
+  (use-package dashboard
+    :ensure t
+    :config
+    (dashboard-setup-startup-hook)
+    (setq show-week-agenda t)
+    (setq dashboard-items '((recents . 10)
+                            (bookmarks . 2)
+                            (projects . 4)))
+    (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
+    (setq dashboard-set-file-icons t)
+    (setq dashboard-set-heading-icons t)
+    (add-to-list 'recentf-exclude (format "%s/\\.emacs\\.d/elpa/.*" (getenv "HOME"))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
